Update dev environment; use environment variables from .env, display pipenv progress

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   interlocutor-dev:
     build: ./
     container_name: interlocutor-dev
+    env_file: .env
     ports:
       - "8888:8888"
     volumes:
