--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,7 @@ services:
     env_file: .env
     ports:
       - "8888:8888"
+      - "5432:5432"
     volumes:
       - ./:/usr/src/app
+      - ./data/postgres/:/var/lib/postgresql/data
