Remove commented code, only run what is necessary to initialise db

--- a/Docker/db/Dockerfile
+++ b/Docker/db/Dockerfile
@@ -1,15 +1,5 @@
 FROM postgres:13-alpine
 
+# Providing the postgres data directory is empty i.e. the service is being created for the first time
+# then all scripts in this directory will be executed. In this case, make sure a database and user are created.
 COPY init.sql /docker-entrypoint-initdb.d/
-#ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
-#ENTRYPOINT ["docker-entrypoint.sh"]
-
-#ENV POSTGRES_PASSWORD=xxxx
-#ENV POSTGRES_USER=postgres_user
-#ENV POSTGRES_DB=first_db
-#RUN bash usr/local/bin/docker-entrypoint.sh 'postgres'
-
-#RUN POSTGRES_PASSWORD=xxxx /usr/local/bin/docker-entrypoint.sh
-
-# Keep container running in detached mode, so execute a meaningless command in the foreground
-#CMD ["tail", "-f", "/dev/null"]
