Add EXEC style for RUN where possible

--- a/Docker/dev/Dockerfile
+++ b/Docker/dev/Dockerfile
@@ -4,13 +4,13 @@ FROM python:3.7
 ARG username=docker_user
 RUN adduser --disabled-password --gecos '' $username
 RUN adduser $username sudo
-RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+RUN ["echo", "%sudo ALL=(ALL) NOPASSWD:ALL", ">>", "/etc/sudoers"]
 USER $username
 
 # Ensure current host directory containing python requirements is available and create virtual environment
 WORKDIR /usr/src/app
 COPY . .
-RUN pip install -r python_requirements/requirements.txt
+RUN ["pip", "install", "-r", "python_requirements/requirements.txt"]
 
 # Keep container running in detached mode, so execute a meaningless command in the foreground
 CMD ["tail", "-f", "/dev/null"]
