Pick up on deployment environment when connecting to database

--- a/Docker/environment_variables/.env.dev.example
+++ b/Docker/environment_variables/.env.dev.example
@@ -1,3 +1,4 @@
+DEPLOYMENT_ENVIRONMENT=dev
 GUARDIAN_API_KEY=<GUARDIAN_API_KEY>
 POSTGRES_USER=<POSTGRES_USER>
 POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
