--- a/Docker/environment_variables/.env.stg.example
+++ b/Docker/environment_variables/.env.stg.example
@@ -1,3 +1,4 @@
+DEPLOYMENT_ENVIRONMENT=stg
 GUARDIAN_API_KEY=<GUARDIAN_API_KEY>
 POSTGRES_USER=<POSTGRES_USER>
 POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
