--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - docker-compose build stg db_stg
   - docker-compose up -d stg db_stg
   - docker-compose start db_stg
-  - docker ps
+  - docker ps -a
 
 script:
   # Run tests on staging
