--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - docker-compose up -d stg db_stg
   - docker-compose start db_stg
   - docker ps -a
+  - docker logs db_stg
 
 script:
   # Run tests on staging
