--- a/Docker/environment_variables/.env.prd.example
+++ b/Docker/environment_variables/.env.prd.example
@@ -1,3 +1,4 @@
 GUARDIAN_API_KEY=<GUARDIAN_API_KEY>
 POSTGRES_USER=<POSTGRES_USER>
 POSTGRES_PASSWORD=<POSTGRES_PASSWORD>
+NEO4J_AUTH=neo4j/<NEO4j_PASSWORD>
